...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <RelativeLayout

            android:id="@+id/form_relativelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/add_lpgconnection_userprompt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                android:layout_below="@id/add_lpgconnection_instructions"
                app:counterEnabled="true"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true">

                <EditText
                    android:id="@+id/add_lpgconnectionnameedittext"
                    android:layout_width="300dp"
                    android:layout_height="@dimen/textinputlayout_height"
                    android:layout_marginLeft="@dimen/add_edit_text_leftmargin"
                    android:layout_marginStart="@dimen/add_edit_text_leftmargin"
                    android:hint="@string/Hint_Connection_Name"
                    android:paddingBottom="2dp"
...
                android:textSize="@dimen/add_text_size_lable"
                app:counterEnabled="true"
                app:errorEnabled = "true"
                app:hintAnimationEnabled="true">

                <AutoCompleteTextView
                    android:id="@+id/add_provideredittext"
                    android:layout_width="@dimen/textfield_width"
                    android:layout_height="@dimen/textinputlayout_height"
                    android:layout_marginLeft="@dimen/add_edit_text_leftmargin"
                    android:layout_marginStart="@dimen/add_edit_text_leftmargin"
                    android:completionThreshold="@integer/autocomplete_threshold"
                    android:dropDownAnchor="@id/add_provideredittext"
...
                android:layout_below="@id/add_providerlabel"
                android:textSize="@dimen/add_text_size_lable"
                app:counterEnabled="true"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true">
                <EditText
                    android:id="@+id/add_agencyedittext"
                    android:layout_width="@dimen/textfield_width"
                    android:layout_height="@dimen/textinputlayout_height"
                    android:layout_marginLeft="@dimen/add_edit_text_leftmargin"
                    android:layout_marginStart="@dimen/add_edit_text_leftmargin"
                    android:hint="@string/Hint_Agency_Name"
                    android:textSize="@dimen/add_text_size_lable" />
...
                android:layout_below="@id/add_distributorphonenumber"
                android:textSize="@dimen/add_text_size_lable"
                app:counterEnabled="true"
                app:errorEnabled = "true"
                app:hintAnimationEnabled="true">
                <EditText
                    android:id="@+id/add_agencyphoneedittext"
                    android:layout_width="@dimen/textfield_width"
                    android:layout_height="@dimen/textinputlayout_height"
                    android:layout_alignTop="@+id/add_providerlabel"
                    android:layout_marginLeft="@dimen/add_edit_text_leftmargin"
                    android:layout_marginStart="@dimen/add_edit_text_leftmargin"
                    android:hint="@string/Hint_Agency_Phone"
...
                android:textSize="@dimen/add_text_size_lable"
                app:counterEnabled="true"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true"
                >
                <EditText
                    android:id="@+id/add_connectionsmsnumber"
                    android:layout_width="@dimen/textfield_width"
                    android:layout_height="@dimen/textinputlayout_height"
                    android:layout_marginLeft="@dimen/add_edit_text_leftmargin"
                    android:layout_marginStart="@dimen/add_edit_text_leftmargin"
                    android:hint="Enter SMS No"
                    android:inputType="number"
...
                android:textSize="@dimen/add_text_size_lable"
                app:counterEnabled="true"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true">

                <EditText
                    android:id="@+id/add_connectionid"
                    android:layout_width="@dimen/textfield_width"
                    android:layout_height="@dimen/textinputlayout_height"
                    android:layout_marginLeft="@dimen/add_edit_text_leftmargin"
                    android:layout_marginStart="@dimen/add_edit_text_leftmargin"
                    android:hint="@string/Add_Connection_id"
                    android:textSize="@dimen/add_text_size_lable" />
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:id="@+id/add_lastbookeddate_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/add_connectionidlabel"
                android:orientation="horizontal"
                >
                <android.support.design.widget.TextInputLayout
...
                        android:layout_marginStart="@dimen/add_edit_text_leftmargin"
                        android:hint="@string/Add_Last_Booked_Date"
                        android:textSize="@dimen/add_text_size_lable"    />

                </android.support.design.widget.TextInputLayout>
                <ImageButton
                    android:id="@+id/btn_calendarimage"
                    android:layout_width="@dimen/calendarimage_width"
                    android:layout_height="@dimen/calendarimage_height"
                    android:layout_marginEnd="@dimen/calendarmargin"
                    android:layout_marginLeft="@dimen/calendarmargin"
                    android:layout_marginRight="@dimen/calendarmargin"
                    android:layout_marginStart="@dimen/calendarmargin"
...
                android:textSize="@dimen/add_text_size_lable"
                app:counterEnabled="true"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true">

                <EditText
                    android:id="@+id/add_connectionexpiry"
                    android:layout_width="@dimen/textfield_width"
                    android:layout_height="@dimen/textinputlayout_height"
                    android:layout_marginLeft="@dimen/add_edit_text_leftmargin"
                    android:layout_marginStart="@dimen/add_edit_text_leftmargin"
                    android:hint="@string/Add_Expiry_days"
                    android:inputType="number"
...
