<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navdrawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:fitsSystemWindows="true"
        tools:context=".MainActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/ar_collapsing_layout"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:background="@drawable/lpg_banner_1"

                    />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@color/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />
            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="260dp"
            android:orientation="vertical">


            <com.google.android.gms.ads.AdView
                android:id="@+id/banner_homescreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_centerHorizontal="false"
                android:layout_gravity="bottom"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                app:adSize="SMART_BANNER"
                app:adUnitId="@string/AdView_banner">

            </com.google.android.gms.ads.AdView>


            <android.support.v7.widget.RecyclerView
            android:id="@+id/lpg_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
            android:scrollbars="vertical"
                android:layout_marginBottom="4dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"></android.support.v7.widget.RecyclerView>

        </LinearLayout>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="@dimen/fab_bottom_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:scaleType="center"
            android:src="@drawable/ic_add_connection_blue"
            app:backgroundTint="@color/colorWhite"
            app:elevation="4dp" />


    </android.support.design.widget.CoordinatorLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/nav_recyclerview"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorWhite"
        android:choiceMode="singleChoice" />

</android.support.v4.widget.DrawerLayout>

    <!--app:backgroundTint="@color/colorWhite"-->