<resources>
    <!--General strings-->
    <string name="DIALOG_OK">OK</string>
    <string name="DIALOG_CANCEL">Cancel</string>


    <string name="app_name">LPG Booking</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_lpgconnection">AddLPGConnection</string>
...
    <string name="Add_Agency_Phone">Agency IVRS number</string>
    <string name="Hint_Agency_Phone">Enter Agency IVRS Phone no</string>
    <string name="Hint_sms_no">Enter no for SMS booking</string>
    <string name="Add_Connection_id">Enter Consumer Number</string>
    <string name="Add_Expiry_days">Enter best-guess expiry time in days</string>
    <string name="Add_Last_Booked_Date">Enter Last Booked Date</string>
    <string name="Calendar_Accessibility_message">Click on this image to select latest booked date for your LPG connection</string>
    <string name="btn_Submit">Submit</string>
    <string name="btn_Cancel">Cancel</string>
    <string name="Notification_MidWayAlarm">is half done. Click to book your cylinder</string>
    <string name="Add_Connection_User_Prompt_AddMode">You can add a new LPG connection details here. </string>
    <string name="Add.Connection.User.Instructions">You will get your Agency phone number details from your LPG provider\'s website, please refer to FAQs section in Home screen menu. \nYou will find your connecton id in your LPG connection invoice or your LPG connection document.\nPlease provide correct details to help in easy re-fill.</string>
    <string name="Add_Connection_User_Prompt_EditMode">You can edit your LPG Booking details below.</string>
...
    </string-array>
    <string name="tellafriend_desc">This LPG booking app is going to help you a lot. You can try!!!</string>
    <string name="tellafriend_with">Share with your Friend through</string>
    <string name="contactus_URL">https://lpgbookingapp.wordpress.com/contact/</string>
    <string name="privacypolicy_URL">https://lpgbookingapp.wordpress.com/privacy-policy/</string>
    <string name="notification_app_transcend">You will be moved out of app to browser</string>
    <string name="navdrawer_open">Drawer Open</string>

    <string name="navdrawer_close">Drawer Close</string>
    <!--Phone booking registration-->
    <string name="phonebooking_activity_title">Phone Booking Registration</string>
    <string name="registration_desc">You need to register your mobile number to refill via phone booking or SMS booking option.\n\nPlease select your connection.</string>
    <string name="reg_button">CALL TO REGISTER</string>
...
