...
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/addlpg_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbarheight"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            android:title="@string/Add_connection_activity_title"
            />
...

    <include
        android:id="@+id/lpg_relative_layout"
        layout="@layout/content_add_lpgconnection" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_save_connection"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:elevation="0dp"
        android:scaleType="center"
...
